mid: 0000528 msg: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@858 e3271b2b-fd41-4d56-bedf-4b5636213925